Updated the home and Logo link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md" <a class="navbar-brand " href="WeatherApp.html">
+    <nav class="navbar navbar-expand-md" <a class="navbar-brand " href="https://ashmit-s.github.io/WeatherApp/">
         <img src="tropical-storm.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         SkyCast
         </a>
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav px-2">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="WeatherApp.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="https://ashmit-s.github.io/WeatherApp/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
